--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ CXX=clang++
 #CFLAGS= -O0 -g -std=c++11 -mmacosx-version-min=10.11 -Wextra -Wall -F/Library/Frameworks -I../include -I-../include
 CFLAGS= -O0 -g -std=c++11 -mmacosx-version-min=10.9 -F/Library/Frameworks -I../include -I-../include
 LIBS=-framework SDL2 -lc++ -lc
-LDFLAGS= -macosx_version_min 10.11 -framework SDL2
+LDFLAGS=-framework SDL2 -macosx_version_min 10.9
 
 
 CFILES=tinysim.cpp spisim.cpp simssd1331.cpp
