--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-*.lib
-*.o
-*.dSYM
+# Build directory
+build/
+
+# Temp files
+.DS_Store
+.Trashes
+Thumbs.db
+Desktop.ini
+
+# Vim swap files
+*.sw*
+
+# Backup files
+*~
