--- a/examples/tinytest/CMakeLists.txt
+++ b/examples/tinytest/CMakeLists.txt
@@ -1,18 +1,7 @@
-find_package(SDL2 REQUIRED)
-
-include_directories(${PROJECT_SOURCE_DIR}/include)
-
 set(SRCS
     tinytest.ino
 )
-
-foreach(f ${SRCS})
-    string(REGEX REPLACE "^(.*)\.ino$" "${CMAKE_CURRENT_BINARY_DIR}/\\1.cpp" newname ${f})
-    string(REGEX REPLACE ${f} ${newname} SRCS ${SRCS})
-
-    file(COPY ${f} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-    file(RENAME ${CMAKE_CURRENT_BINARY_DIR}/${f} ${newname})
-endforeach(f)
+arduino_to_cxx(SRCS ${SRCS})
 
 add_executable(tinytest ${SRCS})
 
